--- a/assets/main.css
+++ b/assets/main.css
@@ -1,34 +1,25 @@
 /* Section hero */
 
-.hero {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  background: url("img/bg-hero.svg") no-repeat center;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: space-evenly;
-}
+
+/* header start */
 
 .header {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-}
-
-.header:last-child {
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .logo__img {
-  margin-left: 50px;
-  margin-top: 20px;
+  margin-left: 50%;
+  margin-top: 20%;
   width: 125px;
   height: 125px;
 }
 
+.nav {
+  margin-right: 15%;
+}
 
 .nav__list {
   display: flex;
@@ -40,12 +31,17 @@
   font-size: 18px;
   font-family: 'Ubuntu';
 }
-.nav__item:hover{
+
+.nav__item:hover {
   text-decoration: underline;
 }
 
 .nav__link {
   text-decoration: none;
+}
+
+.switch-lang {
+  margin-right: 5%;
 }
 
 .lang-list {
@@ -58,16 +54,33 @@
   margin-right: 30px;
   color: #444444;
 }
-.lang-item:hover{
+
+.lang-item:hover {
   text-decoration: underline;
 }
+
+/* header end */
+
+
+.hero {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background: url("img/bg-hero.svg") no-repeat top right;
+  background-size: 70%;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: space-evenly;
+}
+
 
 .hero__container {
   height: 90%;
   display: flex;
   flex-direction: column;
-  align-items: left;
   justify-content: center;
+
 }
 
 .hero__txt {
@@ -76,18 +89,28 @@
   flex-direction: column;
   align-content: center;
   justify-content: center;
-  margin-left: 160px;
+  margin-left: 10%;
+  margin-bottom: 2%;
+}
+
+.hero-desc {
+  font-family: 'Cabin';
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+  font-size: 24px;
+  color: #444444
 }
 
 .section-title {
   text-transform: uppercase;
   font-family: 'Ubuntu';
-  /* line-height: 60px; */
   font-size: 42px;
+  margin-bottom: 3%;
 }
 
 .socials {
-  margin-left: 160px;
+  margin-left: 10%;
 }
 
 .socials-list {
@@ -98,28 +121,58 @@
   padding: 0;
 }
 
-.socials-icon{
+.socials-icon {
   width: 40px;
   height: 40px;
   margin-right: 20px;
 }
+
 .socials-icon:hover {
   fill: #4A4C6A;
 }
 
-/* Section about */
-.about-txt {
-  min-height: 55px;
-  width: 100%;
+.content-right {
   display: flex;
-  flex: 1;
   flex-direction: column;
-  align-items: center;
+  width: 100%;
+  height: 90%;
 }
 
-.about__txt {
+.drone-illust {
+  height: 210px;
+  width: 480px;
+  position: absolute;
+  left: 55%;
+  top: 15%;
+}
+
+.flat-illust {
+  height: 320px;
+  width: 380px;
+  position: absolute;
+  right: 5%;
+  bottom: 10%;
+}
+
+/* Section about */
+
+.about-header {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: bold, 700;
+  line-height: 60px;
+  font-size: 36px;
+  color: #5377A0;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+  margin-bottom: 2%;
+}
+
+.about-txt {
+  padding-top: 3%;
+  padding-bottom: 3%;
+  display: flex;
+  justify-content: center;
   width: 100%;
   background: #EEE1E8 linear-gradient(to left, #ffffff, #EEE1E8);
 }
@@ -207,6 +260,7 @@ iframe {
   color: #ffffff;
   font-size: 16px;
 }
+
 /* Adaptive */
 
 
@@ -336,6 +390,7 @@ section {
 h1 {
   color: #5377A0;
   margin-bottom: 0;
+  font-weight: 700;
 }
 
 h2 {
@@ -346,6 +401,7 @@ h2 {
   font-weight: bold;
   line-height: 60px;
   font-size: 36px;
+  font-weight: 700;
 }
 
 h3 {
